--- a/templates/homepage/navi-user.html
+++ b/templates/homepage/navi-user.html
@@ -1,12 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light rounded m-2 p-1">
-  <a class="navbar-brand bg-danger text-white rounded mr-2 ml-2 p-2 font-lobster" href="/"> Memories for Sale</a>
+  <a class="navbar-brand bg-danger text-white rounded mr-2 ml-2 p-2 font-lobster" href="https://www.facebook.com/Techkids.Code.the.Change/"> Memories for Sale</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse align-middle font-weight-bold" id="navbarNavDropdown">
-    <ul class="navbar-nav">      
+    <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link ml-4 mt-2 font-weight-bold text-warning font-pacifico" href="">
+        <a class="nav-link p-3 text-danger" href="https://www.facebook.com/ILIAT.Education/"><i class="fas fa-heartbeat fa-2x"></i></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link text-warning ml-5 pt-4 font-pacifico" href="">
           <h5>A picture is worth a thousand words, but the memories are priceless...</h5>
         </a>
       </li>
@@ -18,6 +21,9 @@
           <a class="btn btn-danger font-pacifico" href="#">Name</a>
         </li>
 
+        <li class="nav-item border border-danger rounded bg-danger">
+          <a class="btn btn-danger font-pacifico" href="/user/set-it-free">Set it free</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle mr-2 ml-2 text-danger border border-danger rounded" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Category <i class="fas fa-align-justify text-danger"></i>
