--- a/templates/itemdetail/detailpage.html
+++ b/templates/itemdetail/detailpage.html
@@ -12,9 +12,10 @@
     </div>
       <!-- Product Info -->
       {% include "itemdetail/productinfo.html" %}
-      <!-- Comment -->
-      {% include "itemdetail/comment.html" %}
-
+      <div class="">
+        <!-- Comment -->
+        {% include "itemdetail/comment.html" %}        
+      </div>
 
     </div>
   </div>
