--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,35 @@
 .font-lobster {
   font-family: 'Lobster', cursive;
 }
+
 .font-indie {
   font-family: 'Indie Flower', cursive;
 }
+
 .h-100 {
   height: 200px;
 }
+
 .text-20px {
   font-size: 20px;
+}
+
+.card-columns {
+  column-count: 5;
+}
+
+button :hover {
+  background-color: blue;
+}
+
+.font-pacifico {
+  font-family: 'Pacifico', cursive;
+}
+
+.inf-content{
+    border:1px solid #DDDDDD;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    border-radius:10px;
+    box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.3);
 }
