--- a/templates/form/setitfree.html
+++ b/templates/form/setitfree.html
@@ -2,16 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>MFS</title>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     {% include "meta-data.html"  %}
+    <title>Welcome to MFS</title>
+    <link rel="icon" type="image/png" href="https://cdn0.iconfinder.com/data/icons/social-icons-rounded/110/Heart-Bubble-512.png">
   </head>
   <body>
-      {% include ('form/navi-set-free.html') %}
-      {% include ('form/upload.html') %}
+
+    {% include "form/navi-set-free.html" %}
+
+    {% include "form/upload.html" %}
 
 
-  </body>
+
+    </body>
 </html>
