--- a/templates/form/upload.html
+++ b/templates/form/upload.html
@@ -7,24 +7,29 @@
       <section class="mt-3 ml-5">
         <br>
         <b><label>Type of item</label></b>
+
         <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
           <label class="form-check-label" for="defaultCheck1">
             Clothing
           </label>
         </div>
+
         <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
           <label class="form-check-label" for="defaultCheck1">
             Accessories
           </label>
         </div>
+
         <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
           <label class="form-check-label" for="defaultCheck1">
             Handmade
           </label>
-        </div><div class="form-check">
+        </div>
+
+        <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
           <label class="form-check-label" for="defaultCheck1">
             Stationery
@@ -101,6 +106,16 @@
 
 <br>
 <br>
+
+<section class="mt-2">
+    <div class="form-row mt--30">
+      <div class="col-md-4 mb-1">
+        <b><label for="validationTooltip01">Title</label></b>
+        <input type="text" class="form-control w-300" name="title" id="validationTooltip01" placeholder="Product name" required>
+        <div class="valid-tooltip">
+        </div>
+      </div>
+</section>
 
 <b><label for="validationTooltip01">Story</label></b>
 <textarea type="text" class="form-control w-540 h200" name="story" id="validationTooltip01" required> </textarea>
