--- a/templates/homepage-2.html
+++ b/templates/homepage-2.html
@@ -7,16 +7,14 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     {% include "meta-data.html"  %}
     <title>Welcome to MFS</title>
-    <link rel="icon" type="image/png" href="https://cdn0.iconfinder.com/data/icons/social-icons-rounded/110/Heart-Bubble-512.png">
   </head>
   <body>
 
     {% include "homepage/navi-signin.html" %}
 
-    <div class="card-columns m-4">
+    <div class="card-columns">
       {% for item in all_items %}
-
-      <div class="card bg-light border border-light rounded">
+      <div class="card">
         <img class="rounded border border-light p-2 rounded" src= "static/media/{{item.image[0]}}" alt="" style="width: 100%;">
         <div class="card-body">
           <div class="col-12 col-md-8 text-danger font-weight-bold"> {{ item.title }} </div>
