--- a/templates/homepage/navi-signin.html
+++ b/templates/homepage/navi-signin.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light rounded m-2 p-1">
+<nav class="navbar navbar-expand-lg navbar-light bg-light rounded m-2 p-">
   <a class="navbar-brand bg-danger text-white rounded mr-2 ml-2 p-2 font-lobster" href="https://www.facebook.com/Techkids.Code.the.Change/"> Memories for Sale</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,54 +8,24 @@
       <li class="nav-item active">
         <a class="nav-link p-3 text-danger" href="https://www.facebook.com/ILIAT.Education/"><i class="fas fa-heartbeat fa-2x"></i></a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link ml-4 mt-2 font-weight-bold text-warning font-pacifico" href="">
+          <h5>A picture is worth a thousand words, but the memories are priceless...</h5>
+        </a>
+      </li>
     </ul>
     </div>
     <div class="d-flex flex-row-reverse">
       <ul class="navbar-nav">
+        <li class="nav-item border border-danger rounded bg-danger mr-2">
+
+          {% include "homepage/sign-up.html" %}
+
+        </li>
+
         <li class="nav-item border border-danger rounded bg-danger">
 
-          <!-- Button trigger modal -->
-        <button type="button" class="btn btn-danger font-weight-bold" data-toggle="modal" data-target="#exampleModal">
-          <i class="far fa-play-circle"></i> Log in
-        </button>
-
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header text-primary font-weight-bold">
-                <h5 class="modal-title" id="exampleModalLabel">Log in with <i class="fab fa-facebook-square"></i> </h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-
-                <div class="container justify-content-center w-100">
-                  <div class="col">
-                    <div class="row d-flex justify-content-center">
-                      <i class="fas fa-heartbeat text-danger fa-3x"></i>
-                    </div>
-                    <div class="row d-flex justify-content-center">
-                      <h3>Welcome to</h3>
-                    </div>
-                    <div class="row d-flex justify-content-center font-lobster text-danger">
-                      <h3> <a href="#" class="text-danger"> Memories for Sale</a></h3>
-                    </div>
-                    <div class="row d-flex justify-content-center m-2">
-                      <span class="w-100">Thông qua việc Log in, bạn đồng ý với <span class="font-weight-bold"> Điều khoản Dịch vụ, Chính sách Quyền riêng tư</span> của Memories for Sale</span>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Log in</button>
-              </div>
-            </div>
-          </div>
-        </div>
+          {% include "homepage/sign-in.html" %}
 
         </li>
         <li class="nav-item dropdown">
