--- a/templates/itemdetail/comment.html
+++ b/templates/itemdetail/comment.html
@@ -17,7 +17,6 @@
       </div>
     </div>
   </div>
-  <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">Random items</div>
+  <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">{% include "itemdetail/random_items.html" %}</div>
 </div>
-  <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">Random items</div>
-  </div>
+</div>
