--- a/templates/user/user_product.html
+++ b/templates/user/user_product.html
@@ -6,7 +6,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" style="" src="http://via.placeholder.com/300x300" alt="First slide">
+      <img class="d-block w-100" src="http://via.placeholder.com/300x300" alt="First slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="http://via.placeholder.com/300x300" alt="Second slide">
