--- a/templates/wrong.html
+++ b/templates/wrong.html
@@ -2,16 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>MFS</title>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     {% include "meta-data.html"  %}
+    <title>Welcome to MFS</title>
   </head>
   <body>
-      {% include ('form/navi-set-free.html') %}
-      {% include ('form/upload.html') %}
+
+    <div class="alert alert-success" role="alert">
+      <h4 class="alert-heading">One step closer!</h4>
+      <p>So sorry, your username or password is invalid</p>
+      <hr>
+      <p class="mb-0"> <a href="/sign-in">Please try again!</a></p>
+    </div>
 
 
-  </body>
+    </body>
 </html>
