--- a/templates/itemdetail/navi-user.html
+++ b/templates/itemdetail/navi-user.html
@@ -13,7 +13,7 @@
     <div class="d-flex flex-row-reverse">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link font-weight-bold bg-danger text-white rounded p-2 mt-3" href="#"> <i class="fas fa-address-card"></i> You </a>
+          <a class="nav-link font-weight-bold bg-danger text-white rounded p-2 mt-3" href="#"> <i class="fas fa-address-card"></i> {{user_name}} </a>
         </li>
         <li class="nav-item">
           <a class="nav-link font-weight-bold text-danger border border-danger rounded m-3" href="#"> <i class="fas fa-bookmark"></i> Let it be</a>
