--- a/templates/itemdetail/productinfo.html
+++ b/templates/itemdetail/productinfo.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="row m-4">
       <div class="col font-weight-bold text-danger">
-        JAR OF HEARTS
+        {{item.title}}
       </div>
       <div class="col font-weight-bold text-danger">
-        $4.99
+        VND {{item.price}}
       </div>
     </div>
 </div>
