--- a/templates/user/user.html
+++ b/templates/user/user.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link rel="stylesheet" href="../static/style.css">    
     {% include "meta-data.html"  %}
     <title>Welcome to MFS</title>
   </head>
