--- a/templates/form/navi-set-free.html
+++ b/templates/form/navi-set-free.html
@@ -4,7 +4,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse align-middle font-weight-bold" id="navbarNavDropdown">
-    <ul class="navbar-nav">      
+    <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link ml-4 mt-2 font-weight-bold text-warning font-pacifico" href="">
           <h5>A picture is worth a thousand words, but the memories are priceless...</h5>
@@ -15,7 +15,7 @@
     <div class="d-flex flex-row-reverse">
       <ul class="navbar-nav">
         <li class="nav-item border border-danger rounded bg-danger mr-2">
-          <a class="btn btn-danger font-pacifico" href="#">Name</a>
+          <a class="btn btn-danger font-pacifico" href="#">{{user_name}}</a>
         </li>
 
         <li class="nav-item dropdown">
