--- a/templates/homepage/popup-item.html
+++ b/templates/homepage/popup-item.html
@@ -1,5 +1,5 @@
 <!-- Large modal -->
-<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div id='{{ item.id }}' class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       {% include "itemdetail/detailpage.html" %}
