--- a/templates/itemdetail/carousel.html
+++ b/templates/itemdetail/carousel.html
@@ -1,25 +1,40 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="{{item.id}}_slide" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    {% for img in item.image %}
+    {% if img != '' %}
+      {% if loop.index == 1 %}
+        <li data-target="#{{item.id}}_slide" data-slide-to="0" class="active"></li>
+      {% else %}
+    <li data-target="#{{item.id}}_slide" data-slide-to="{{loop.index -1 }}"></li>
+      {% endif %}
+      {% endif %}
+    {% endfor %}
   </ol>
+
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" style="" src="http://via.placeholder.com/300x300" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="http://via.placeholder.com/300x300" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="http://via.placeholder.com/300x300" alt="Third slide">
-    </div>
+    {% for img in item.image %}
+    {% if img != '' %}
+      {% if loop.index == 1 %}
+      <div class="carousel-item active">
+        <img class="d-block w-100" style="" src="../../static/media/{{img}}" alt="First slide">
+      </div>
+      {% else %}
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../../static/media/{{img}}" alt="{{loop.index}} slide">
+      </div>
+      {% endif %}
+      {% endif %}
+    {% endfor %}
+
+
+
+
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#{{item.id}}_slide" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#{{item.id}}_slide" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
