--- a/templates/itemdetail/comment.html
+++ b/templates/itemdetail/comment.html
@@ -1,22 +1,39 @@
 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
   <li class="nav-item">
-    <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Say something COOL!</a>
+    <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Say something Cool!</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">More...</a>
+    <a class="nav-link" id="{{item.id}}_more-tab" data-toggle="pill" href="#{{item.id}}_more" role="tab" aria-controls="{{item.id}}_more" aria-selected="false">More...</a>
   </li>
 </ul>
 <div class="tab-content" id="pills-tabContent">
   <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
     <div class="m-5">
-      <div class="input-group mb-3">
-        <input type="text" class="form-control text-white bg-dark font-weight-bold rounded" placeholder="Comment . . ." aria-label="Comment" aria-describedby="basic-addon2">
-        <div class="input-group-append">
-          <button class="btn btn-outline-secondary rounded font-weight-bold text-danger m-4" type="button">Post</button>
-        </div>
+
+      <div class="input-group">
+
+                  <div id="wpac-comment"></div>
+          <script type="text/javascript">
+          wpac_init = window.wpac_init || [];
+          wpac_init.push({widget: 'Comment', id: 10667});
+          (function() {
+              if ('WIDGETPACK_LOADED' in window) return;
+              WIDGETPACK_LOADED = true;
+              var mc = document.createElement('script');
+              mc.type = 'text/javascript';
+              mc.async = true;
+              mc.src = 'https://embed.widgetpack.com/widget.js';
+              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(mc, s.nextSibling);
+          })();
+          </script>
+          <a href="https://widgetpack.com" class="wpac-cr">Comments System WIDGET PACK</a>
+
       </div>
+
     </div>
   </div>
-  <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">{% include "itemdetail/random_items.html" %}</div>
+  <div class="tab-pane fade" id="{{item.id}}_more" role="tabpanel" aria-labelledby="{{item.id}}_more-tab">
+    {% include "itemdetail/random_items.html" %}
+  </div>
 </div>
 </div>
