--- a/templates/itemdetail/navigation.html
+++ b/templates/itemdetail/navigation.html
@@ -1,21 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
-  <a class="navbar-brand text-danger font-lobster" href="#"> Memories for Sale</a>
+  <a class="navbar-brand text-danger font-lobster" href="/"> Memories for Sale</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse align-middle font-weight-bold" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link p-3" href="#"><i class="fas fa-heartbeat text-danger"></i> Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link p-3" href="/"><i class="fas fa-heartbeat text-danger"></i> Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle p-3" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="far fa-share-square text-primary"></i> Share
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#"><i class="fab fa-facebook-f text-primary"></i> Facebook</a>
-          <a class="dropdown-item" href="#"><i class="fab fa-pinterest text-danger"></i> Pinterest</a>
-          <a class="dropdown-item" href="#"><i class="fab fa-twitter text-info"></i> Twitter</a>
+          <a class="dropdown-item text-primary" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
+          <a class="dropdown-item text-danger" href="https://www.pinterest.com/" target="_blank"><i class="fab fa-pinterest"></i> Pinterest</a>
+          <a class="dropdown-item text-info" href="https://twitter.com/?lang=en" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
         </div>
       </li>
     </ul>
