--- a/templates/form/upload.html
+++ b/templates/form/upload.html
@@ -48,7 +48,7 @@
           <div class="form-row ">
             <div class="col-md-4 mb-1">
               <b><label for="validationTooltip01">Name</label></b>
-              <input type="text" class="form-control w-300" name="name" id="validationTooltip01" placeholder="Khau Tu" required>
+              <input type="text" class="form-control w-300" name="name" id="validationTooltip01" value="{{user_name}}" placeholder="Khau Tu">
               <div class="valid-tooltip">
               </div>
             </div>
