--- a/templates/user/user.html
+++ b/templates/user/user.html
@@ -5,9 +5,10 @@
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-    <link rel="stylesheet" href="../static/style.css">    
+    <link rel="stylesheet" href="../static/style.css">
     {% include "meta-data.html"  %}
     <title>Welcome to MFS</title>
+    <link rel="icon" type="image/png" href="https://cdn0.iconfinder.com/data/icons/social-icons-rounded/110/Heart-Bubble-512.png">
   </head>
   <body>
 
