--- a/templates/form/navi-set-free.html
+++ b/templates/form/navi-set-free.html
@@ -6,7 +6,10 @@
   <div class="collapse navbar-collapse align-middle font-weight-bold" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link ml-4 mt-2 font-weight-bold text-warning font-pacifico" href="">
+        <a class="nav-link p-3 text-danger" href="/"><i class="fas fa-heartbeat fa-2x"></i></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link ml-5 pl-5 mt-3 font-weight-bold text-warning font-pacifico" href="/">
           <h5>A picture is worth a thousand words, but the memories are priceless...</h5>
         </a>
       </li>
@@ -15,7 +18,7 @@
     <div class="d-flex flex-row-reverse">
       <ul class="navbar-nav">
         <li class="nav-item border border-danger rounded bg-danger mr-2">
-          <a class="btn btn-danger font-pacifico" href="#">{{user_name}}</a>
+          <a class="btn btn-danger font-pacifico" href="/user/{{user_name}}">{{user_name}}</a>
         </li>
 
         <li class="nav-item dropdown">
