--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,12 +22,12 @@
       <div class="card bg-light border border-light rounded">
         <img class="rounded border border-light p-2 rounded" src= "static/media/{{item.image[0]}}" alt="" style="width: 100%;">
         <div class="card-body">
-          <div class="col-12 col-md-8 text-danger font-weight-bold"> {{ item.title }} </div>
-          <div class="col-6 col-md-4 text-secondary font-weight-bold">
+          <span class="col-12 col-md-8 text-danger font-weight-bold"> {{ item.title }} </span>
+          <span class="col-6 col-md-4 text-secondary font-weight-bold">
             <button type="button" class="btn btn-link" data-toggle="modal" data-target="#{{item.id}}">
-              detail
+              Detail
             </button>
-          </div>
+          </span>
         </div>
 
           {% include "homepage/popup-item.html" %}
