--- a/templates/homepage/navi-user.html
+++ b/templates/homepage/navi-user.html
@@ -9,7 +9,7 @@
         <a class="nav-link p-3 text-danger" href="/"><i class="fas fa-heartbeat fa-2x"></i></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link text-warning ml-5 pt-4 font-pacifico" href="">
+        <a class="nav-link text-warning ml-5 pl-5 mt-3 font-pacifico" href="">
           <h5>A picture is worth a thousand words, but the memories are priceless...</h5>
         </a>
       </li>
@@ -18,11 +18,11 @@
     <div class="d-flex flex-row-reverse">
       <ul class="navbar-nav">
         <li class="nav-item border border-danger rounded bg-danger mr-2">
-          <a class="btn btn-danger font-pacifico" href="#">{{ user_name }}</a>
+          <a class="btn btn-danger font-pacifico" href="#">{{ user.user_name }}</a>
         </li>
 
         <li class="nav-item border border-danger rounded bg-danger">
-          <a class="btn btn-danger font-pacifico" href="/user/{{user_name}}/set-it-free">Let it be</a>
+          <a class="btn btn-danger font-pacifico" href="/user/{{user.user_name}}/set-it-free">Let it be</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle mr-2 ml-2 text-danger border border-danger rounded" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
