--- a/templates/user/user_info.html
+++ b/templates/user/user_info.html
@@ -16,17 +16,7 @@
               <div class="table-responsive">
               <table class="table table-condensed table-responsive table-user-information">
                   <tbody>
-                      <tr>
-                          <td>
-                              <strong>
-                                  <span class="glyphicon glyphicon-asterisk text-primary"></span>
-                                  Identificacion
-                              </strong>
-                          </td>
-                          <td class="text-primary">
-                              123456789
-                          </td>
-                      </tr>
+
                       <tr>
                           <td>
                               <strong>
@@ -35,45 +25,22 @@
                               </strong>
                           </td>
                           <td class="text-primary">
-                              Bootdey
-                          </td>
-                      </tr>
-                      <tr>
-                          <td>
-                              <strong>
-                                  <span class="glyphicon glyphicon-cloud text-primary"></span>
-                                  Lastname
-                              </strong>
-                          </td>
-                          <td class="text-primary">
-                              Bootstrap
+                              {{user.user_name}}
                           </td>
                       </tr>
 
                       <tr>
                           <td>
                               <strong>
-                                  <span class="glyphicon glyphicon-bookmark text-primary"></span>
-                                  Username
+                                  <span class="glyphicon glyphicon-asterisk text-primary"></span>
+                                  Phone number
                               </strong>
                           </td>
                           <td class="text-primary">
-                              bootnipets
+                              {{user.phone}}
                           </td>
                       </tr>
 
-
-                      <tr>
-                          <td>
-                              <strong>
-                                  <span class="glyphicon glyphicon-eye-open text-primary"></span>
-                                  Role
-                              </strong>
-                          </td>
-                          <td class="text-primary">
-                              Admin
-                          </td>
-                      </tr>
                       <tr>
                           <td>
                               <strong>
@@ -85,28 +52,7 @@
                               noreply@email.com
                           </td>
                       </tr>
-                      <tr>
-                          <td>
-                              <strong>
-                                  <span class="glyphicon glyphicon-calendar text-primary"></span>
-                                  created
-                              </strong>
-                          </td>
-                          <td class="text-primary">
-                              20 jul 20014
-                          </td>
-                      </tr>
-                      <tr>
-                          <td>
-                              <strong>
-                                  <span class="glyphicon glyphicon-calendar text-primary"></span>
-                                  Modified
-                              </strong>
-                          </td>
-                          <td class="text-primary">
-                               20 jul 20014 20:00:00
-                          </td>
-                      </tr>
+
                   </tbody>
               </table>
               </div>
