--- a/templates/user/user_product.html
+++ b/templates/user/user_product.html
@@ -1,19 +1,26 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
+    {% for product in products %}
+    {% if loop.index == 1 %}
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    {% else %}
+    <li data-target="#carouselExampleIndicators" data-slide-to="{{loop.index -1 }}"></li>
+    {% endif %}
+    {% endfor %}
   </ol>
   <div class="carousel-inner">
+    {% for product in products %}
+    {% if loop.index == 1%}
     <div class="carousel-item active">
-      <img class="d-block w-100" src="http://via.placeholder.com/300x300" alt="First slide">
+      <img class="d-block w-100" src="../static/media/{{product.image[0]}}" alt="Third slide">
     </div>
+    {% else %}
     <div class="carousel-item">
-      <img class="d-block w-100" src="http://via.placeholder.com/300x300" alt="Second slide">
+      <img class="d-block w-100" src="../static/media/{{product.image[0]}}" alt="{{loop.index}} slide">
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="http://via.placeholder.com/300x300" alt="Third slide">
-    </div>
+    {% endif %}
+    {% endfor %}
+
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
