--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,7 +13,14 @@
     <link rel="icon" type="image/png" href="https://cdn0.iconfinder.com/data/icons/social-icons-rounded/110/Heart-Bubble-512.png">
   </head>
   <body>
-    <p>{{message}}</p>
+    {% if message != '' %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <strong>{{message}}</strong>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endif %}
     {% include "homepage/navi-signin.html" %}
 
     <div class="card-columns m-4">
