--- a/templates/homepage/navi-signin.html
+++ b/templates/homepage/navi-signin.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light rounded m-2 p-">
-  <a class="navbar-brand bg-danger text-white rounded mr-2 ml-2 p-2 font-lobster" href="/"> Memories for Sale</a>
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light rounded m-2 ">
+  <a class="navbar-brand sticky-top bg-danger text-white rounded mr-2 ml-2 p-2 font-lobster" href="/"> Memories for Sale</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -46,11 +46,11 @@
             Category <i class="fas fa-align-justify text-danger"></i>
           </a>
           <div class="dropdown-menu font-weight-bold" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item text-danger" href="#"> Clothings </a>
-            <a class="dropdown-item text-danger" href="#"> Accessories </a>
-            <a class="dropdown-item text-danger" href="#"> Handmade </a>
-            <a class="dropdown-item text-danger" href="#"> Stationaries </a>
-            <a class="dropdown-item text-danger" href="#"> Something Else </a>
+            <a class="dropdown-item text-danger" href="/category/Clothing"> Clothings </a>
+            <a class="dropdown-item text-danger" href="/category/Accessories"> Accessories </a>
+            <a class="dropdown-item text-danger" href="/category/Handmade"> Handmade </a>
+            <a class="dropdown-item text-danger" href="/category/Stationery"> Stationaries </a>
+            <a class="dropdown-item text-danger" href="/category/Something else"> Something Else </a>
           </div>
         </li>
         {% if user_name != None %}
