--- a/templates/homepage/navi-user.html
+++ b/templates/homepage/navi-user.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light rounded m-2 p-1">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light rounded m-2 p-1">
   <a class="navbar-brand bg-danger text-white rounded mr-2 ml-2 p-2 font-lobster" href="/"> Memories for Sale</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
