--- a/templates/itemdetail/navigation.html
+++ b/templates/itemdetail/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light rounded">
   <a class="navbar-brand text-danger font-lobster" href="/"> Memories for Sale</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
