--- a/templates/itemdetail/navigation.html
+++ b/templates/itemdetail/navigation.html
@@ -38,7 +38,7 @@
             </button>
           </div>
           <p class="font-pacifico">To become new owner of this super cute item, please contact via:</p>
-          <p> Name: <span class="text-danger font-weight-bold">{{item.phone}}</span></p>
+          <p> Name: <span class="text-danger font-weight-bold">{{item.name}}</span></p>
           <p> Phone: <span class="text-danger font-weight-bold">{{item.phone}}</span></p>
           <p> Address: <span class="text-danger font-weight-bold">{{item.address}}</span></p>
           <div class="bg-light modal-footer">
