--- a/templates/user/user_info.html
+++ b/templates/user/user_info.html
@@ -49,7 +49,7 @@
                               </strong>
                           </td>
                           <td class="text-primary">
-                              noreply@email.com
+                              {{user.email}}
                           </td>
                       </tr>
 
