--- a/templates/homepage/navi-signin.html
+++ b/templates/homepage/navi-signin.html
@@ -1,5 +1,5 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light rounded m-2 ">
-  <a class="navbar-brand sticky-top bg-danger text-white rounded mr-2 ml-2 p-2 font-lobster" href="/"> Memories for Sale</a>
+  <a class="navbar-brand sticky-top bg-danger text-white rounded mr-2 font-lobster" href="/"> Memories for Sale</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
